--- a/WebContent/listar-pecas.xhtml
+++ b/WebContent/listar-pecas.xhtml
@@ -53,7 +53,7 @@
 					
 					<p:column headerText="Ações">
 						<p:commandButton icon="fa fa-fw fa-edit" ajax="false" styleClass="btn btn-warning" action="#{pecaMB.alterar(p)}"
-						rendered="#{usuarioMB.atendente}"></p:commandButton>
+						rendered="#{usuarioMB.recepcionista}"></p:commandButton>
 						
 						<p:commandButton icon="fa fa-fw fa-remove" styleClass="btn btn-danger" actionListener="#{pecaMB.remove(p)}"
 						rendered="#{usuarioMB.gerente}">
