--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -19,8 +19,8 @@
 			<div id="conteudo">
 				<h3>Cliente</h3>
 				<br></br>
-				<h:commandLink value="Novo Cliente" style="text-decoration: none; margin-right: 5px !important;" styleClass="btn btn-info" action="novo-cliente.xhtml" rendered="#{usuarioMB.atendente}"></h:commandLink>
-				<h:commandLink value="Novo Veículo"  style="text-decoration: none; margin-right: 5px !important;" styleClass="btn btn-info" action="novo-veiculo.xhtml" rendered="#{usuarioMB.atendente}"></h:commandLink>
+				<h:commandLink value="Novo Cliente" style="text-decoration: none; margin-right: 5px !important;" styleClass="btn btn-info" action="novo-cliente.xhtml" rendered="#{usuarioMB.recepcionista}"></h:commandLink>
+				<h:commandLink value="Novo Veículo"  style="text-decoration: none; margin-right: 5px !important;" styleClass="btn btn-info" action="novo-veiculo.xhtml" rendered="#{usuarioMB.recepcionista}"></h:commandLink>
 				<h:commandLink value="Lista de Clientes" style="text-decoration: none; margin-right: 5px !important;" styleClass="btn btn-info" action="listar-clientes.xhtml"></h:commandLink>
 				<h:commandLink value="Lista de Veículos" style="text-decoration: none;" styleClass="btn btn-info" action="listar-veiculos.xhtml"></h:commandLink>
 			</div>
@@ -29,7 +29,7 @@
 			<div id="conteudo">
 				<h3>Peça</h3>
 				<br></br>
-				<h:commandLink value="Nova Peça" style="text-decoration: none; margin-right: 5px !important;" styleClass="btn btn-warning" action="nova-peca.xhtml" rendered="#{usuarioMB.atendente}"></h:commandLink>
+				<h:commandLink value="Nova Peça" style="text-decoration: none; margin-right: 5px !important;" styleClass="btn btn-warning" action="nova-peca.xhtml" rendered="#{usuarioMB.recepcionista}"></h:commandLink>
 				<h:commandLink value="Lista de Peças" style="text-decoration: none; margin-right: 5px !important;" styleClass="btn btn-warning" action="listar-pecas.xhtml"></h:commandLink>
 			</div>
 			
