--- a/WebContent/novo-cliente.xhtml
+++ b/WebContent/novo-cliente.xhtml
@@ -13,7 +13,7 @@
 	
 		<div id="conteudo">
 		
-			<h:form rendered="#{!usuarioMB.atendente}" id="dialog_veiculos">
+			<h:form rendered="#{!usuarioMB.recepcionista}" id="dialog_veiculos">
 				<p:dialog header="Acesso Negado" resizable="false" widgetVar="dlg2"
 					modal="true" height="80" closable="false" visible="true" draggable="false">
 
