--- a/WebContent/novo-veiculo.xhtml
+++ b/WebContent/novo-veiculo.xhtml
@@ -14,7 +14,7 @@
 <ui:define name="corpo">
 
 	<div id="conteudo">
-			<h:form rendered="#{!usuarioMB.atendente}" id="dialog_veiculos">
+			<h:form rendered="#{!usuarioMB.recepcionista}" id="dialog_veiculos">
 				<p:dialog header="Acesso Negado" resizable="false" widgetVar="dlg2"
 					modal="true" height="80" closable="false" visible="true" draggable="false">
 
